# avinor-case

./: README.md  notes.txt  pyproject.toml  requirements.txt
case/: Konkurranseregler.txt  Vedlegg1.txt  webpage_description.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: avinor_documentation.typ
outputs/: final_predictions.csv  final_predictions_sequence.csv
outputs/analysis/: lgbm_analysis.json  model_analysis.json
outputs/feature_cache/: catboost_metrics.json  catboost_oof.npy  catboost_preds_inference.npy  lgbm_metrics.json  lgbm_oof.npy  lgbm_preds_inference.npy  logistic_features.json  logistic_metrics.json  logistic_oof.npy  logistic_preds_inference.npy  mlp_metrics.json  mlp_oof.npy  mlp_preds_inference.npy  sequence_metrics.json  sequence_oof.npy  sim_features_october.parquet  sim_features_october_meta.json  sim_features_training_meta.json  simulation_metrics.json  stacker_oof.npy  stacker_preds_inference.npy  training_metrics.json  xgb_metrics.json  xgb_oof.npy  xgb_preds_inference.npy
outputs/models/: catboost_model.cbm  logistic_model.joblib  logistic_model.npz  mlp_model.joblib  mlp_model.npz  sequence_model.pt  stacker_calibrator.joblib  stacker_model.joblib
scripts/: analyze_lgbm_features.py  fetch_airport_metadata.py  fetch_met_weather.py  fetch_met_weather_history.py  generate_calendar_events.py  model_analysis.py  report_sequence_july_auc.py  run_pipeline.py  run_sequence_pipeline.py  run_simulation_and_ensemble.py  train_logistic.py
tests/: test_simulation.py
(+13 files in other folders)
